# TP2-1

./: .gitignore  CenariosDeTeste.ods  INSTRUCOES.txt  Makefile  Pegar.cpp  Projeto1.cbp  Projeto1.depend  Projeto1.layout  main.cpp  makefile  transefirEmpregado.cpp
EmpresaDois/include/: Classes.h
EmpresaDois/src/: Auxiliar2.cpp  DiretordeExecutivo2.cpp  DiretordeOperacoes2.cpp  DiretordeSetor2.cpp  Empregado2.cpp  Empresa2.cpp  Profissional2.cpp  Setor2.cpp  Tecnico2.cpp
EmpresaUm/include/: Classes.h
EmpresaUm/src/: Auxiliar1.cpp  DiretordeExecutivo1.cpp  DiretordeOperacoes1.cpp  DiretordeSetor1.cpp  Empregado1.cpp  Empresa1.cpp  Profissional1.cpp  Setor1.cpp  Tecnico1.cpp
gtest-tutorial/: CMakeLists.txt  INSTRUCOES.txt
gtest-tutorial/src/: codigoDoTrabalho.cpp  codigoDoTrabalho2.cpp
gtest-tutorial/tests/: runTests.cpp  teste1.cpp  teste2.cpp
headers/: empregado.h
include/: Classes.h
src/: Auxiliar.cpp  DiretordeExecutivo.cpp  DiretordeOperacoes.cpp  DiretordeSetor.cpp  Empregado.cpp  Empresa.cpp  Profissional.cpp  Setor.cpp  Tecnico.cpp  empregado.cpp
tests/: empregadoTeste.cpp  runTests.cpp
